# spekulatio

./: LICENSE  README.md  justfile  pyproject.toml
docs/: reference.md  topic-builtin-actions.md  tutorial.md
docs/examples/: spekulatio.yaml
spekulatio/: __init__.py  exceptions.py  logs.py
spekulatio/commands/: __init__.py  build.py  version.py
spekulatio/commands/show/: __init__.py  layers.py  tree.py
spekulatio/lib/: parse_frontmatter.py  parse_values.py  paths.py
spekulatio/models/: __init__.py  action.py  layer.py  node.py  rule.py  tree.py
spekulatio/models/actions/: __init__.py  copy.py  create_dir.py  md2html.py  noop.py  render.py
spekulatio/operations/: __init__.py  build.py  build_tree.py  create_tree.py  get_layers.py  write_tree.py
tests/: conftest.py  test_model_action.py  test_model_action_copy.py  test_model_action_render.py  test_model_layer.py  test_model_node.py  test_model_node_prune.py  test_model_node_sorting.py  test_model_node_traversing.py  test_model_node_url.py  test_model_node_values.py  test_model_node_writing.py  test_operation_create_tree.py  test_values.py
tests/_fixtures/action-copy/: spekulatio.yaml
tests/_fixtures/action-render/: _values.yaml  spekulatio.yaml
tests/_fixtures/config-layers/: spekulatio.yaml
tests/_fixtures/layer-empty/: foo.md
tests/_fixtures/layer-minimal/: spekulatio.yaml
tests/_fixtures/layer-wrong/: spekulatio.yaml
tests/_fixtures/prune/: spekulatio.yaml
tests/_fixtures/simple/: spekulatio.yaml
tests/_fixtures/url/: spekulatio.yaml
tests/_fixtures/url-with-prefix/: spekulatio.yaml
(+20 files in other folders)
